--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
+    "request": "^2.88.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
@@ -28,6 +30,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
+    "@types/request": "^2.48.12",
     "prisma": "^5.16.2"
   }
 }
