--- a/server/docker-compose-server.yaml
+++ b/server/docker-compose-server.yaml
@@ -24,7 +24,7 @@ services:
         container_name: postgres
         image: postgres
         env_file:
-            - ./server/.env.dev
+            - ./server/.env
         ports:
             - "5432:5432"
         volumes:
