--- a/server/docker-compose-server.yaml
+++ b/server/docker-compose-server.yaml
@@ -4,17 +4,17 @@ services:
     server:
         container_name: blog-server
         build:
-            context: ./server
+            context: ./
             dockerfile: Dockerfile
         ports:
             - "8000:8000"
         volumes:
-            - ./server:/usr/src/app
+            - ./usr/src/app
             - run_vol:/var/run
             - cache_vol:/var/cache
             - tmp_vol:/tmp
         env_file:
-            - ./server/.env.dev
+            - .env
         command: >
             sh -c "npm install && NODE_ENV=dev npm run dev"
         depends_on:
@@ -24,11 +24,11 @@ services:
         container_name: postgres
         image: postgres
         env_file:
-            - ./server/.env
+            - .env
         ports:
             - "5432:5432"
         volumes:
-            - ./server/model/db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+            - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
     prisma:
         container_name: prisma
