--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,19 @@
-# install dependencies
-FROM node:14-alpine AS deps
+# Stage 1: Install dependencies
+FROM node:22-alpine AS deps
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+RUN npm install -g npm@latest
+RUN npm install
 
-# build the application
-FROM node:14-alpine AS builder
+# Stage 2: Build the application
+FROM node:22-alpine AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
 RUN npm run build
 
-# run the application
-FROM node:14-alpine AS runner
+# Stage 3: Run the application
+FROM node:22-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV production
 COPY --from=builder /app ./
