--- a/client/docker-compose-client.yaml
+++ b/client/docker-compose-client.yaml
@@ -4,7 +4,7 @@ services:
     nextjs:
         container_name: nextjs
         build:
-            context: .
+            context: ./
             dockerfile: Dockerfile
         ports:
             - "3000:3000"
@@ -12,10 +12,8 @@ services:
             - .:/app
             - node_modules:/app/node_modules
         env_file:
-            - ./.env
+            - .env
         command: "npm run dev"
-        depends_on:
-            - postgres
 
 
 volumes:
