--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/src/app.js",
-    "dev": "nodemon ./src/app.ts",
+    "dev": "node ./src/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
