--- a/client/docker-compose-client.yaml
+++ b/client/docker-compose-client.yaml
@@ -13,6 +13,8 @@ services:
             - node_modules:/app/node_modules
         env_file:
             - .env
+        environment:
+            NEXT_PUBLIC_BASE_URL: http://localhost:8000
         command: "npm run dev"
 
 
